# autoformalize-math-lab

./: .dockerignore  .editorconfig  .env.example  .env.production.template  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_COMPLETE.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_SDLC.md  AUTONOMOUS_SDLC_COMPLETE_SUMMARY.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GITHUB_WORKFLOWS_SETUP.md  IMPLEMENTATION_FINAL.md  IMPLEMENTATION_SUMMARY.md  Makefile  PRODUCTION_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PROJECT_CHARTER.md  README.md  SECURITY.md  TERRAGON_AUTONOMOUS_EXECUTION_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_EXECUTION_SUMMARY.md  TERRAGON_AUTONOMOUS_SDLC_EXECUTION_FINAL_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_EXECUTION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_EXECUTION_SUMMARY.md  TERRAGON_FINAL_EXECUTION_SUMMARY_2025.md  TERRAGON_GENERATION4_FINAL_REPORT.md  TERRAGON_GENERATION5_BREAKTHROUGH_EXECUTION_REPORT.md  TERRAGON_GENERATION6_FINAL_AUTONOMOUS_EXECUTION_REPORT.md  TERRAGON_GENERATION7_FINAL_AUTONOMOUS_EXECUTION_REPORT.md  ULTIMATE_AUTONOMOUS_SDLC_BREAKTHROUGH_PUBLICATION.md  VALUE_DASHBOARD.md  advanced_research_execution_engine.py  (+100 more)
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh  post-start.sh
.github/: PULL_REQUEST_TEMPLATE.md  project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  feature_request.md  feature_request.yml  mathematical_issue.md  mathematical_issue.yml
.github/workflows/: ci.yml
.terragon/: advanced-metrics.json  advanced_discovery.py  autonomous_executor.py  config.yaml  cycle-log.json  execution-history.json  execution-strategy.json  learning-report.md  learning_engine.py  model-updates.json  orchestrator-config.json  orchestrator-state.json  perpetual_orchestrator.py  scoring-model.json  simple_discovery.py  value-metrics.json  value-tracking.json  value_discovery.py  value_tracker.py
cache/: adaptive_config.json  adaptive_scaling.json  advanced_caching.json  distributed_processing.json  fault_tolerance_config.json  generation6_neural_model.json  health_snapshots.jsonl  intelligent_optimization.json  learning_state.json  monitoring_config.json  predictive_analytics.json  quality_state.json  realtime_optimization.json  recovery_patterns.json  security_config.json  self_healing_config.json  test_autonomous_patterns.json
cache/autonomous_patterns/: discovered_patterns.json
cache/formalization/: lean4:mock:00366d07b0e5469a:f019ae43.pkl  lean4:mock:026d6e3fbb897b19:f019ae43.pkl  lean4:mock:0964b7ed810fd6cb:f019ae43.pkl  lean4:mock:172a966d8c0bfff7:f019ae43.pkl  lean4:mock:1b315b017aa094b0:f019ae43.pkl  lean4:mock:2b203de6699911ed:f019ae43.pkl  lean4:mock:2bcdc09a1be225e5:f019ae43.pkl  lean4:mock:3175b05ec84c4690:f019ae43.pkl  lean4:mock:348852d8f379863d:f019ae43.pkl  lean4:mock:468bf3d4aa751ef3:f019ae43.pkl  lean4:mock:4d03bf9ceef60fb1:f019ae43.pkl  lean4:mock:4f775779b5ec31c6:f019ae43.pkl  lean4:mock:56921172097ae25d:f019ae43.pkl  lean4:mock:57271a5ec4bf34f2:f019ae43.pkl  lean4:mock:5c827b061ac1f6a5:f019ae43.pkl  lean4:mock:5ee0bdf2409bd1a5:f019ae43.pkl  lean4:mock:6c05f58591d57b54:f019ae43.pkl  lean4:mock:6ddb0569de19c55e:f019ae43.pkl  lean4:mock:70aa86621770b710:f019ae43.pkl  lean4:mock:78bbe88fcbeae933:f019ae43.pkl  lean4:mock:7b082c8af85eca48:f019ae43.pkl  lean4:mock:8cd98248a3b7881f:f019ae43.pkl  lean4:mock:92fcfa5de62d42d7:f019ae43.pkl  lean4:mock:973a267cd133b70d:f019ae43.pkl  lean4:mock:9bf809e48a55eeea:f019ae43.pkl  lean4:mock:a0575455a7ed0f06:f019ae43.pkl  lean4:mock:a22e0f9f109fa90d:f019ae43.pkl  lean4:mock:a747239aaeb89760:f019ae43.pkl  lean4:mock:a8c00e5651be7f47:f019ae43.pkl  lean4:mock:aada2ccffd3667b3:f019ae43.pkl  lean4:mock:b25fa74c34691475:f019ae43.pkl  lean4:mock:b29eb3ac98dcd5b8:f019ae43.pkl  lean4:mock:b3233f4cac888b2d:f019ae43.pkl  lean4:mock:b58daffee028e0fb:f019ae43.pkl  lean4:mock:c3c79556b623fa86:f019ae43.pkl  lean4:mock:c433e9e82887c6a7:f019ae43.pkl  lean4:mock:c9fc8685429d37e1:f019ae43.pkl  lean4:mock:d59c1102195129ed:f019ae43.pkl  lean4:mock:e017b3cb264a206d:f019ae43.pkl  lean4:mock:e44077c89aa9e445:f019ae43.pkl  (+7 more)
cache/synthesis/: synthesis_20250811_053138_0.pkl  synthesis_20250812_215005_0.pkl
deployment/compliance/: gdpr_compliance.py
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: deployment.yaml
deployment/monitoring/: prometheus.yml
deployment/nginx/: nginx.conf
deployment/production/: Dockerfile.production  docker-compose.production.yml  entrypoint.sh  healthcheck.py
deployment/terraform/: main.tf
docker/: nginx.conf  prometheus.yml
docs/: DEPLOYMENT.md  Makefile  ROADMAP.md  SETUP_REQUIRED.md  conf.py  index.rst
docs/_static/: custom.css  custom.js
docs/adr/: README.md  adr-0001-programming-language.md  adr-template.md
docs/guides/: README.md
docs/monitoring/: README.md  alerting.md  health-checks.md  metrics.md  structured-logging.md
examples/: basic_theorem.coq  basic_theorem.isabelle  basic_theorem.lean4  basic_theorem.tex  mock_demo.py  simple_theorem.tex
quality_gates_results/: quality_gates_report.json
research_results/: research_report.md  research_results.json
research_study_results/: Formalization_Algorithms_Comparison_1754668388_data.json  Formalization_Algorithms_Comparison_1754668388_report.md  Formalization_Algorithms_Comparison_1755035448_data.json  Formalization_Algorithms_Comparison_1755035448_report.md  Formalization_Algorithms_Comparison_1755395220_data.json  Formalization_Algorithms_Comparison_1755395220_report.md
scaling_results/: scaling_demo_results.json
scripts/: autonomous_execution.py  backup.sh  build.sh  dependency_automation.py  deploy.sh  healthcheck.sh  metrics_collection.py  performance_benchmarking.py  release.sh  repository_maintenance.py  rollback.sh  schedule_autonomous.sh
security/: security_audit.py
tests/: README.md  __init__.py  conftest.py  test_checker.py  test_comprehensive.py  test_converter.py  test_parser.py
(+95 files in other folders)
